# image-downscaler

./: README.md  image-downscaler.py  pyproject.toml
